# 1brc-rust

./: .env  Cargo.toml
src/: main.rs
