[package]
name = "onebil"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
memmap2 = "0.9.9"
rayon = "1.11.0"
tracing = { version = "0.1.43", features = ["async-await", "log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
lto = "fat"
opt-level = 3
